--- a/Assignment2_MVVM/Assignment2_MVVM.csproj
+++ b/Assignment2_MVVM/Assignment2_MVVM.csproj
@@ -100,5 +100,8 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Readme.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
